Modified home and layout

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>RichardYuh</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-	</head>
-	<body>
-		Hello 
-	</body>
-</html>
+{% extends 'layout.html' %}
+
+{% block body %}
+	<div class="jumbotron text-center">
+		<h1>Welcome to Richard Yuh's Run The Numbers Sports Analysis Page</h1>
+		<p class="lead">The #1 Source for NBA and NFL Content</p>
+		{% if session.logged_in == NULL %}
+			<a href="/register" class="btn btn-primary btn-lg">Register</a>
+			<a href="/login" class="btn btn-success btn-lg">Login</a>
+		{% endif %}
+	</div>
+{% endblock %}
+
